--- a/libreria_virtual/mi_libreria/templates/mi_libreria/inicio.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/inicio.html
@@ -3,3 +3,6 @@
 {% block titulo %}
 <h1>Sean bienvenidos</h1>
 {% endblock titulo %} 
+
+<a href="{% url 'lista_libros' %}">Ver todos los libros</a>
+<br><br>
