--- a/libreria_virtual/mi_libreria/templates/mi_libreria/lista_libros.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/lista_libros.html
@@ -1,19 +1,35 @@
-{% block titulo %} 
-Lista de libros disponibles
-{% endblock titulo %}
+{% extends 'base.html' %}
+
 
 {% block contenido %}
-    <h1>
-    Bienvenidos.
-    </h1>
 
     <h3>Libros disponibles:</h3>
-    <ul>
 
-    {% for libro in libros %}
-    <li>
-        {{ libro.nombre }}
-    </li>
-    {% endfor %}
-    </ul>
+<table class="table"> 
+    <tbody> 
+        <tr> 
+            <th>Nombre</th>
+            <th>Libro</th>
+        </tr>
+        {% for libro in libros %}
+        <tr> 
+            <td>{{libro.nombre}}</td>
+            <td>{{libro.autor}}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+
+</table>
+    
+    <form action="{% url 'buscar_libros' %}" method="post">
+        {% csrf_token %}
+        <input type="text" name="busqueda">
+        <input type="submit" value="Buscar por nombre">
+      </form>
+    <br>
+    <a href="{% url 'crear_libros' %}">Agregar un libro</a>
+    <a href="{% url 'lista_libros' %}">Ver todos los libros</a>
+    <a href="{% url 'lista_autores' %}">Ver autores</a>
+    <a href="{% url 'lista_generos' %}">Ver todos los géneros</a>
+    <br><br>
 {% endblock contenido %} 
