--- a/libreria_virtual/mi_libreria/static/mi_libreria/css/styles.css
+++ b/libreria_virtual/mi_libreria/static/mi_libreria/css/styles.css
@@ -8078,9 +8078,9 @@ textarea.form-control-lg {
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
 }
 
-.text-white {
+.text-black {
   --bs-text-opacity: 1;
-  color: rgba(var(--bs-white-rgb), var(--bs-text-opacity)) !important;
+  color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
 }
 
 .text-body {
@@ -8161,7 +8161,7 @@ textarea.form-control-lg {
 
 .bg-dark {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-body-color), var(--bs-list-group-active-border-color)) !important;
+  background-color: rgba(var(--bs-green), var(--bs-list-group-active-border-color)) !important;
 }
 
 .bg-black {
