--- a/libreria_virtual/mi_libreria/templates/mi_libreria/inicio.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/inicio.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %}
-<h1>Sean bienvenidos</h1>
+<title>¡Hola, {{user.get_full_name}}</title>
 {% endblock titulo %} 
 
 <a href="{% url 'lista_libros' %}">Ver todos los libros</a>
