--- a/libreria_virtual/mi_libreria/templates/mi_libreria/lista_autores.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/lista_autores.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %} 
-Lista de autores disponibles
+Autores
 {% endblock titulo %}
 
 {% block contenido %}
