--- a/libreria_virtual/perfiles/templates/perfiles/formulario_perfil.html
+++ b/libreria_virtual/perfiles/templates/perfiles/formulario_perfil.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block titulo %}
+Editar perfil
+{% endblock titulo %} 
+
 {% block contenido %}
 <p>Tu username es <b>{{ object.username }}</b></p>
 
