--- a/libreria_virtual/mi_libreria/templates/mi_libreria/lista_generos.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/lista_generos.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block titulo %} 
-Lista de géneros disponibles
+Géneros
 {% endblock titulo %}
 
 {% block contenido %}
