--- a/libreria_virtual/blog/templates/blog/lista_articulos.html
+++ b/libreria_virtual/blog/templates/blog/lista_articulos.html
@@ -6,7 +6,21 @@ Artículos
 
 {% block contenido %}
 
-    <h3>Libros disponibles:</h3>
+    <h3>Artículos</h3>
+
+    {% if articulo|length > 0 %}
+
+    <ul>
+        {% for arts in articulo %}
+            <li>{{articulo.titulo}}</li>
+            <li>{{articulo.subtitulo}}</li>
+
+        {% endfor %}
+    </ul>
+{% else %}
+    <p>No hay entradas aún.</p>
+{% endif %}
+
 
 <table class="table"> 
     <tbody> 
@@ -29,11 +43,6 @@ Artículos
 
 </table>
     
-    <form action="{% url 'buscar_libros' %}" method="post">
-        {% csrf_token %}
-        <input type="text" name="busqueda">
-        <input type="submit" value="Buscar por nombre">
-      </form>
     <br>
     <a href="{% url 'crear_libros' %}">Agregar un libro</a>
     <a href="{% url 'lista_libros' %}">Ver todos los libros</a>
