--- a/libreria_virtual/blog/templates/blog/lista_articulos.html
+++ b/libreria_virtual/blog/templates/blog/lista_articulos.html
@@ -23,8 +23,8 @@ Artículos
             <td>{{ articulo.autor }}</td>
             <td>{{ articulo.fecha }}</td>
             <td>
-              <a href="{% url 'ver_articulos' articulo.id %}">Ver más</a>
-            </td>
+              <a href="{% url 'ver_articulos' articulo.id %}">See more</a>
+          </td>
             <td>
                 <a href="{% url 'editar_articulos' articulo.id %}">Editar</a>
               </td>         
