--- a/libreria_virtual/mi_libreria/templates/mi_libreria/lista_autores.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/lista_autores.html
@@ -13,12 +13,14 @@ Autores
                 <th>Nombre</th>
                 <th>Apellido</th>
                 <th>Creador</th>
+                <th>Bio</th>
             </tr>
             {% for autor in autores %}
             <tr> 
                 <td>{{ autor.nombre }}</td>
                 <td>{{ autor.apellido }}</td>
                 <td>{{ autor.creador }}</td>
+                <td>{{ autor.bio }}</td>
                 <td>
                     <a href="{% url 'editar_autor' autor.id %}">Editar</a>
                   </td>  
