--- a/libreria_virtual/mi_libreria/templates/mi_libreria/lista_libros.html
+++ b/libreria_virtual/mi_libreria/templates/mi_libreria/lista_libros.html
@@ -14,12 +14,14 @@ Libros
             <th>Nombre</th>
             <th>Autor</th>
             <th>Creador</th>
+            <th>Resumen</th>
         </tr>
         {% for libro in libros %}
         <tr> 
             <td>{{libro.nombre}}</td>
             <td>{{libro.autor}}</td>
             <td>{{libro.creador}}</td>
+            <td>{{libro.resumen}}</td>
             <td>
                 <a href="{% url 'editar_libro' libro.id %}">Editar</a>
               </td>         
